# python-directed-inputs-class

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  MIGRATION.md  README.md  index.html  pyproject.toml  tox.ini
.cursor/rules/: 00-development.mdc
.github/: copilot-instructions.md
.github/scripts/: set_version.py
.github/workflows/: ci.yml  codeql-analysis.yml  docs.yml  manual-release.yml  ollama-pr-review.yml  release.yml
docs/: conf.py  overview.rst
docs/_static/: custom.css
docs/api/: modules.rst
examples/: README.md  __init__.py  basic_usage.py  decorator_api.py  encoding_decoding.py
memory-bank/: activeContext.md
src/directed_inputs_class/: __init__.py  __main__.py  decorators.py
tests/: __init__.py  test_decorators.py  test_main.py
