[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "directed-inputs-class"
version = "1.2.0"
description = "Directed inputs class consumes and processes inputs from sources beyond args and kwargs"
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"
keywords = ["python3", "inputs", "configuration"]
authors = [{ name = "Jon Bogaty", email = "jon@jonbogaty.com" }]
maintainers = [{ name = "Jon Bogaty", email = "jon@jonbogaty.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "case-insensitive-dictionary>=0.2.1",
    "deepmerge>=1.1.1",
    "extended-data-types>=5.1.2,<1000",
    "PyYAML>=6.0",
]

[project.urls]
Documentation = "https://github.com/jbcom/directed-inputs-class#readme"
Issues = "https://github.com/jbcom/directed-inputs-class/issues"
Source = "https://github.com/jbcom/directed-inputs-class"

[project.optional-dependencies]
tests = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "coverage[toml]>=7.6.0",
]
typing = [
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.12.20240724",
    "sortedcontainers-stubs>=2.4.2",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinxawesome-theme>=5.2.0",
    "sphinx-autodoc2>=0.5.0",
    "myst-parser>=3.0.1",
    "docutils>=0.17",
]

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = "tests"
xfail_strict = true
filterwarnings = []

[tool.coverage.run]
branch = true
parallel = true
source = ["directed_inputs_class"]

[tool.coverage.paths]
source = ["src", ".tox/py*/**/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["directed_inputs_class", "tests"]
exclude = ["docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/**/*.py" = ["PLR0911", "PLR0912"]
"tests/*" = ["ANN", "D", "E", "S", "PLR2004", "SLF001", "B011", "PT015", "PT017"]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = ["wrapt.*", "deepmerge.*"]
ignore_missing_imports = true

[tool.semantic_release]
build_command = "uv build"
commit_message = "chore(release): release v{version} [skip ci]"
allow_zero_version = true
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/directed_inputs_class/__init__.py:__version__"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
